--- a/main.css
+++ b/main.css
@@ -212,7 +212,7 @@ h4::after {
 }
 
 /* Full-width input fields */
-input[type=text], input[type=password] {
+input[type=text], input[type=password], input[type=email] {
   width: 85%;
   padding: 12px 20px;
   margin: 8px 20px;
@@ -220,6 +220,12 @@ input[type=text], input[type=password] {
   border: 2px solid #787878;
   box-sizing: border-box;
   font-size: 16px;
+}
+
+.form-check-label{
+  margin-top: 20px;
+  margin-left: 43px;
+  text-align: center;
 }
 
 h3{
